# server/src/middleware/__generated__/swagger.json
@@ -143,69 +143,8 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Partial_UserAdditionalInfo_": {
-				"properties": {
-					"date_of_birth": {
-						"$ref": "#/components/schemas/FirebaseFirestore.Timestamp"
-					},
-					"does_freestyle": {
-						"type": "boolean"
-					},
-					"does_racing": {
-						"type": "boolean"
-					},
-					"does_ski": {
-						"type": "boolean"
-					},
-					"gender": {
-						"type": "string"
-					},
-					"emergency_name": {
-						"type": "string"
-					},
-					"emergency_phone": {
-						"type": "string"
-					},
-					"emergency_relation": {
-						"type": "string"
-					},
-					"first_name": {
-						"type": "string"
-					},
-					"last_name": {
-						"type": "string"
-					},
-					"membership": {
-						"type": "string",
-						"enum": [
-							"admin",
-							"member"
-						]
-					},
-					"dietary_requirements": {
-						"type": "string"
-					},
-					"faculty": {
-						"type": "string"
-					},
-					"university": {
-						"type": "string"
-					},
-					"student_id": {
-						"type": "string"
-					},
-					"returning": {
-						"type": "boolean"
-					},
-					"university_year": {
-						"type": "string"
-					}
-				},
-				"type": "object",
-				"description": "Make all properties in T optional"
-			},
 			"EditSelfResponse": {
-				"$ref": "#/components/schemas/Partial_UserAdditionalInfo_"
+				"$ref": "#/components/schemas/UserAdditionalInfo"
 			},
 			"EditUsersRequestBody": {
 				"properties": {
